SERVER-46440 Routing info should be reloaded before retry of creating session collection index on stale config error

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1335,6 +1335,7 @@ env.Library(
     ],
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/s/sharding_router_api',
+        '$BUILD_DIR/mongo/db/pipeline/sharded_agg_helpers',
     ]
 )
 
