SERVER-46841 Make PeriodicRunner interrupt blocked operations on stop

--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -376,4 +376,5 @@ error_codes:
     - {code: 13436,name: NotMasterOrSecondary,categories: [NotMasterError,RetriableError]}
     - {code: 14031,name: OutOfDiskSpace}
     - {code: 17280,name: OSBELETE_KeyTooLong}
+    - {code: 46841,name: ClientMarkedKilled,categories: [Interruption,CancelationError,RetriableError]}
 
