SERVER-46648 Make _killOperations command kill cursors
(cherry picked from commit 29798df747882fcb02fe98178d42ade0b9a0da52)
(cherry picked from commit f2ec5e85fdcdb5b34901cc23cec95f9b534841ec)

--- a/src/mongo/s/commands/SConscript
+++ b/src/mongo/s/commands/SConscript
@@ -60,6 +60,7 @@ env.Library(
         'cluster_is_master_cmd.cpp',
         'cluster_kill_op.cpp',
         'cluster_killcursors_cmd.cpp',
+        'cluster_killoperations_cmd.cpp',
         'cluster_list_databases_cmd.cpp',
         'cluster_list_shards_cmd.cpp',
         'cluster_map_reduce_agg.cpp',
