--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -234,6 +234,7 @@ env.Library(
         'repl_server_parameters',
         '$BUILD_DIR/mongo/db/catalog/database_holder',
         '$BUILD_DIR/mongo/db/storage/oplog_cap_maintainer_thread',
+        '$BUILD_DIR/mongo/db/storage/storage_control',
         '$BUILD_DIR/mongo/db/logical_clock',
     ],
 )
@@ -565,6 +566,7 @@ env.Library(
     ],
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/db/commands/mongod_fsync',
+        '$BUILD_DIR/mongo/db/storage/storage_control',
         'repl_server_parameters',
         'replication_auth',
     ],
@@ -1168,10 +1170,11 @@ env.Library(
         'rollback_source_impl',
     ],
     LIBDEPS_PRIVATE=[
-        'local_oplog_info',
         '$BUILD_DIR/mongo/db/commands/mongod_fcv',
         '$BUILD_DIR/mongo/db/commands/test_commands_enabled',
         '$BUILD_DIR/mongo/db/index_builds_coordinator_interface',
+        '$BUILD_DIR/mongo/db/storage/storage_control',
+        'local_oplog_info',
         'repl_server_parameters',
     ],
 )
