--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -322,13 +322,13 @@ functions:
           evergreen_api_key=${evergreen_api_key}
           evergreen_api_user=${evergreen_api_user}
           source ../src/buildscripts/signal_processing_setup.sh
-          detect-changes --evergreen-api-config .evergreen.yml
+          detect-changes --config .signal-processing.yml
     - command: shell.exec
       params:
         working_dir: work
         script: |
           source ../src/buildscripts/signal_processing_setup.sh
-          detect-outliers --evergreen-api-config .evergreen.yml
+          detect-outliers --config .signal-processing.yml
 
 #######################################
 #               Tasks                 #
