SERVER-46742 Move logic to wait for replica set config commitment into a dedicated public method
(cherry picked from commit c5ba5dcef83fd0cb6ffdcb7d999c46fd38ea5ac1)

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -839,6 +839,7 @@ env.Library(
         '$BUILD_DIR/mongo/db/repl/repl_coordinator_interface',
         '$BUILD_DIR/mongo/db/storage/storage_options',
         'drop_pending_collection_reaper',
+        'repl_server_parameters',
         'repl_set_status_commands',
         'repl_settings',
         'replica_set_messages',
