--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -413,6 +413,7 @@ variables:
   - rhel-67-s390x
   - enterprise-rhel-67-s390x
   - rhel70
+  - ubi7
   - rhel76_compile_rhel70
   - enterprise-rhel-70-64-bit
   - rhel-72-s390x
@@ -10420,6 +10421,26 @@ buildvariants:
   - name: .publish
     distros:
     - rhel70
+
+- name: ubi7
+  display_name: "UBI 7"
+  run_on:
+  - ubi7
+  expansions:
+    resmoke_jobs_factor: 1
+    disable_shared_scons_cache: true
+    compile_flags: MONGO_DISTMOD=ubuntu1604 --opt=on -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars
+    tooltags: ""
+    build_mongoreplay: true
+    test_flags: >-
+      --excludeWithAnyTags=requires_os_access
+  tasks:
+  - name: compile_TG
+    distros:
+    - rhel70-large
+  - name: jsCore
+  - name: sharding_gen
+  - name: replica_sets
 
 - &enterprise-rhel-80-64-bit-template
   name: enterprise-rhel-80-64-bit
