--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -61,6 +61,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/reconfig_avoids_diverging_configs.js
 - ticket: SERVER-45081
   test_file: jstests/replsets/reconfig_waits_for_oplog_commitment_condition.js
+- ticket: SERVER-44500
+  test_file: jstests/replsets/apply_ops_inserts_do_not_include_fromMigrate_field.js
 
 sharding_multiversion:
 
