SERVER-47028 Configure the aggregation_secondary_reads test suite to use less memory

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -5457,6 +5457,7 @@ tasks:
   - func: "run tests"
     vars:
       resmoke_args: --suites=aggregation_secondary_reads --storageEngine=wiredTiger
+      resmoke_jobs_max: 1
 
 - <<: *task_template
   name: aggregation_sharded_collections_passthrough
