SERVER-46827 Resmoke end2end tests for timeouts and archival

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -7730,6 +7730,14 @@ tasks:
       resmoke_args: --suites=buildscripts_test
       resmoke_jobs_max: 1
 
+- <<: *task_template
+  name: resmoke_end2end_tests
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_args: --suites=resmoke_end2end_tests
+
 - name: test_packages
   depends_on:
   - name: package
@@ -10017,6 +10025,7 @@ buildvariants:
   - name: .auth
   - name: burn_in_tags_gen
   - name: buildscripts_test
+  - name: resmoke_end2end_tests
   - name: unittest_shell_hang_analyzer_gen
   - name: .causally_consistent !.sharding
   - name: .change_streams
