SERVER-46985 Reduce WT Develop sys-perf variants frequency to 1/week

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -1543,7 +1543,7 @@ buildvariants:
 #######################################
 - name: wtdevelop-1-node-replSet
   display_name: WT Develop 1-Node ReplSet
-  batchtime: 2880  # 48 hours
+  batchtime: 10080 # 7 days
   modules: *modules
   expansions:
     setup: single-replica
@@ -1564,7 +1564,7 @@ buildvariants:
 
 - name: wtdevelop-standalone
   display_name: WT Develop Standalone
-  batchtime: 2880  # 48 hours
+  batchtime: 10080 # 7 days
   modules: *modules
   expansions:
     setup: standalone
