--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -9949,7 +9949,7 @@ buildvariants:
   - name: multi_stmt_txn_jscore_passthrough_with_migration_gen
   - name: multiversion_gen
   - name: .query_fuzzer
-  - name: .random_multiversion_replica_sets
+# - name: .random_multiversion_replica_sets
   - name: .read_write_concern .large
     distros:
     - rhel62-large
@@ -10112,7 +10112,7 @@ buildvariants:
   - name: .jstestfuzz !.flow_control
   - name: .logical_session_cache .repl
   - name: multiversion_gen
-  - name: .random_multiversion_replica_sets
+# - name: .random_multiversion_replica_sets
   - name: .read_write_concern .large
     distros:
     - rhel62-large
