SERVER-47151 Separate WriteOpTest(s) and ChunkManagerTest into separate .cpp files
Also removes some unnecessary code from the BatchedCommandRequest.

--- a/src/mongo/s/SConscript
+++ b/src/mongo/s/SConscript
@@ -440,6 +440,7 @@ env.CppUnitTest(
     source=[
         'append_raw_responses_test.cpp',
         'balancer_configuration_test.cpp',
+        'catalog_cache_refresh_test.cpp',
         'catalog/type_changelog_test.cpp',
         'catalog/type_chunk_test.cpp',
         'catalog/type_collection_test.cpp',
@@ -451,7 +452,6 @@ env.CppUnitTest(
         'catalog/type_shard_collection_test.cpp',
         'catalog/type_shard_test.cpp',
         'catalog/type_tags_test.cpp',
-        'catalog_cache_refresh_test.cpp',
         'chunk_manager_index_bounds_test.cpp',
         'chunk_manager_query_test.cpp',
         'chunk_test.cpp',
@@ -477,14 +477,29 @@ env.CppUnitTest(
         'shard_key_pattern_test.cpp',
         'sharding_task_executor_test.cpp',
         'transaction_router_test.cpp',
+        'write_ops/batch_downconvert_test.cpp',
+        'write_ops/batch_write_exec_test.cpp',
+        'write_ops/batch_write_op_test.cpp',
+        'write_ops/batched_command_request_test.cpp',
+        'write_ops/batched_command_response_test.cpp',
+        'write_ops/chunk_manager_targeter_test.cpp',
+        'write_ops/mock_ns_targeter.cpp',
+        'write_ops/write_op_test.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/db/auth/authmocks',
+        '$BUILD_DIR/mongo/db/logical_clock',
+        '$BUILD_DIR/mongo/db/ops/write_ops_parsers_test_helpers',
         '$BUILD_DIR/mongo/db/query/query_test_service_context',
-        '$BUILD_DIR/mongo/db/service_context_test_fixture',
         '$BUILD_DIR/mongo/db/s/sharding_runtime_d',
+        '$BUILD_DIR/mongo/db/service_context_test_fixture',
         '$BUILD_DIR/mongo/dbtests/mocklib',
+        '$BUILD_DIR/mongo/s/catalog_cache_test_fixture',
         '$BUILD_DIR/mongo/s/catalog/sharding_catalog_client_mock',
+        '$BUILD_DIR/mongo/s/sharding_router_test_fixture',
+        '$BUILD_DIR/mongo/s/write_ops/batch_write_types',
+        '$BUILD_DIR/mongo/s/write_ops/cluster_write_op_conversion',
+        '$BUILD_DIR/mongo/s/write_ops/cluster_write_op',
         '$BUILD_DIR/mongo/util/net/network',
         'catalog_cache_test_fixture',
         'chunk_writes_tracker',
