--- a/buildscripts/resmokeconfig/suites/sharding_multiversion.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_multiversion.yml
@@ -10,6 +10,8 @@ selector:
   # Enable when 4.4 becomes last stable
   - jstests/sharding/killop.js
   - jstests/sharding/verify_sessions_expiration_sharded.js
+  # TODO SERVER-46040: Enable when SERVER-46040 is backported
+  - jstests/sharding/drop_indexes_with_stale_config_error.js
 executor:
   config:
     shell_options:
