SERVER-46040 Maintain retry state across stale config retries for sharded drop indexes
(cherry picked from commit 5403488f656db357ce123f78cf25aa63a9e5aff8)

--- a/src/mongo/s/SConscript
+++ b/src/mongo/s/SConscript
@@ -441,6 +441,7 @@ env.CppUnitTest(
     source=[
         'append_raw_responses_test.cpp',
         'balancer_configuration_test.cpp',
+        'build_versioned_requests_for_targeted_shards_test.cpp',
         'catalog/type_changelog_test.cpp',
         'catalog/type_chunk_test.cpp',
         'catalog/type_collection_test.cpp',
