SERVER-46801 stacktrace logging cleanup/consolidation

--- a/src/mongo/SConscript
+++ b/src/mongo/SConscript
@@ -157,8 +157,8 @@ baseEnv.Library(
         'util/platform_init.cpp',
         'util/shell_exec.cpp',
         'util/signal_handlers_synchronous.cpp',
+        'util/stacktrace.cpp',
         'util/stacktrace_${TARGET_OS_FAMILY}.cpp',
-        'util/stacktrace_json.cpp',
         'util/stacktrace_somap.cpp',
         'util/stacktrace_threads.cpp',
         'util/str.cpp',
