SERVER-47207 move parser from logger to db/command
(cherry picked from commit 7f30f053dff852029e2ca50cc2ab181787ca6da6)

--- a/src/mongo/db/commands/SConscript
+++ b/src/mongo/db/commands/SConscript
@@ -102,6 +102,7 @@ env.Library(
         'kill_all_sessions_command.cpp',
         'kill_sessions_command.cpp',
         'parameters.cpp',
+        'parse_log_component_settings.cpp',
         'refresh_logical_session_cache_now.cpp',
         'refresh_sessions_command.cpp',
         'rename_collection_common.cpp',
@@ -123,7 +124,6 @@ env.Library(
         '$BUILD_DIR/mongo/db/mongohasher',
         '$BUILD_DIR/mongo/db/server_options_core',
         '$BUILD_DIR/mongo/idl/server_parameter',
-        '$BUILD_DIR/mongo/logger/parse_log_component_settings',
         '$BUILD_DIR/mongo/rpc/protocol',
         'test_commands_enabled',
     ],
@@ -585,6 +585,7 @@ env.CppUnitTest(
         "index_filter_commands_test.cpp",
         "list_collections_filter_test.cpp",
         "mr_test.cpp",
+        "parse_log_component_settings_test.cpp",
         "plan_cache_commands_test.cpp",
     ],
     LIBDEPS=[
@@ -597,6 +598,7 @@ env.CppUnitTest(
         "$BUILD_DIR/mongo/db/repl/storage_interface_impl",
         "$BUILD_DIR/mongo/db/service_context_d",
         "$BUILD_DIR/mongo/db/service_context_d_test_fixture",
+        "core",
         "mongod",
         "servers",
         "standalone",
